# ceph-asterisk

./: .env.compose.example  .env.example  .env.fastapi.example  .gitignore  README.md  config.py  data.json  database.py  docker-compose-asterisk-example.yaml  docker-compose-asterisk-example.yml  docker-compose-elastic.yaml  docker-compose-ldap.yaml  docker-compose-mysql.yaml  docker-compose-web.yaml  docker-compose.yaml  dockerfile  dockerfile.web  filebeat.yml  init.sh  ldap_auth.py  main.py  models.py  notes.txt  openapi.json  pyproject.toml  security.py
app/: main.py
deploy/: dockerfile.web
docker/: asterisk.Dockerfile  logrotate.Dockerfile
ldif_files/: testuser.ldif
models/: __init__.py  ast_conf.py  ast_conf_history.py  asterisk_instance.py  audio_files.py  cdr.py  sip_user.py  user.py
routes/: audio_files.py  auth.py  cdr.py  dialplan.py  logs.py  queues.py  users.py  voicemail.py
schemas/: asterisk.py  audio_file.py  auth.py  cdr.py  dialplan.py  logs.py  queue.py  sip.py  user.py  voicemail.py
services/: ast_config_history.py  asterisk_reload.py  dialplan_contexts.py  filebeat_config.py  instance_compose.py  instance_container.py  instance_default_configs.py  instance_media.py  instance_pjsip_seed.py  instance_runtime.py  pjsip_disk_sync.py  queue_config.py  voicemail_config.py  voicemail_messages.py  voicemail_modules.py  voicemail_sounds.py
utils/: ast_config_ini.py  ast_config_views.py  asterisk_image.py  asterisk_sounds.py  audio_library.py  dialplan_repair.py  instance_paths.py  instance_voicemail_spool.py  instance_volumes.py  pjsip_views.py  (+2 more)
(+36 files in other folders)
