[project]
name = "ceph-asterisk4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "docker>=7.1.0",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
